--- a/src/XPlat.Runner/XPlat.Runner.csproj
+++ b/src/XPlat.Runner/XPlat.Runner.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net462;netcoreapp2.1</TargetFrameworks>
+    <RuntimeIdentifiers>win7-x64;win7-x86;ubuntu.16.04-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
