--- a/src/XPlat.Runner.Tests.NUnit/XPlat.Runner.Tests.NUnit.csproj
+++ b/src/XPlat.Runner.Tests.NUnit/XPlat.Runner.Tests.NUnit.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="nunit" Version="3.10.1" />
     <PackageReference Include="NUnit.Console" Version="3.8.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+    <PackageReference Include="TeamCity.VSTest.TestAdapter" Version="1.0.10" />
   </ItemGroup>
 
   <ItemGroup>
