try getting multi-target test reports to work

--- a/src/XPlat.Runner.Tests.NUnit/XPlat.Runner.Tests.NUnit.csproj
+++ b/src/XPlat.Runner.Tests.NUnit/XPlat.Runner.Tests.NUnit.csproj
@@ -4,6 +4,9 @@
     <TargetFrameworks>net462;netcoreapp2.1</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>XPlat.Runner.Tests.NUnit</RootNamespace>
+    <AssemblyName>$(RootNamespace).$(TargetFramework)</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
