--- a/src/XPlat.Runner.Tests.XUnit/XPlat.Runner.Tests.XUnit.csproj
+++ b/src/XPlat.Runner.Tests.XUnit/XPlat.Runner.Tests.XUnit.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.console" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <PackageReference Include="TeamCity.VSTest.TestAdapter" Version="1.0.10" />
+    <!--<PackageReference Include="TeamCity.VSTest.TestAdapter" Version="1.0.10" />-->
   </ItemGroup>
 
   <ItemGroup>
