--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,6 +11,7 @@
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <GenerateAssemblyBindingRedirects>true</GenerateAssemblyBindingRedirects>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+    
   </PropertyGroup>
 
   <!-- Warnings as errors -->
@@ -27,8 +28,7 @@
     <DebugType>portable</DebugType>
   </PropertyGroup>
 
-  <!-- <ItemGroup>
-    <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.65" PrivateAssets="all" />
-  </ItemGroup> -->
-
+  <ItemGroup>
+    <Compile Include="$(MSBuildThisFileDirectory)/SolutionAssemblyInfo.cs" />
+  </ItemGroup>
 </Project>
