fix: VS errors during nuget restore

--- a/src/XPlat.Runner.Tests.NUnit/XPlat.Runner.Tests.NUnit.csproj
+++ b/src/XPlat.Runner.Tests.NUnit/XPlat.Runner.Tests.NUnit.csproj
@@ -6,7 +6,7 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>XPlat.Runner.Tests.NUnit</RootNamespace>
-    <AssemblyName>$(RootNamespace).$(TargetFramework)</AssemblyName>
+    <!--<AssemblyName>$(RootNamespace).$(TargetFramework)</AssemblyName>-->
   </PropertyGroup>
 
   <ItemGroup>
