--- a/src/XPlat.Runner.Tests.XUnit/XPlat.Runner.Tests.XUnit.csproj
+++ b/src/XPlat.Runner.Tests.XUnit/XPlat.Runner.Tests.XUnit.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net462;netcoreapp2.1</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <RootNamespace>XPlat.Runner.Tests.XUnit</RootNamespace>
-    <AssemblyName>$(RootNamespace).$(TargetFramework)</AssemblyName>
+    <!--<AssemblyName>$(RootNamespace).$(TargetFramework)</AssemblyName>-->
   </PropertyGroup>
 
   <ItemGroup>
